--- a/chess.html
+++ b/chess.html
@@ -27,40 +27,40 @@
       <li id="main-li"><strong>Basic Rules</strong></li>
       <li>
         <ul>
-          <li>Chess is a game played by 2 players</li>
-          <li>One player controls the white pieces while the other controls the black pieces</li>
-          <li>The person who controls the white pieces moves first</li>
-          <li>A person is required to move one piece on their turn</li>
-          <li>A player may remove one of their opponent's pieces if one of their pieces are able to do so</li>
+          <li id="sub-li-chess">Chess is a game played by 2 players</li>
+          <li id="sub-li-chess">One player controls the white pieces while the other controls the black pieces</li>
+          <li id="sub-li-chess">The person who controls the white pieces moves first</li>
+          <li id="sub-li-chess">A person is required to move one piece on their turn</li>
+          <li id="sub-li-chess">A player may remove one of their opponent's pieces if one of their pieces are able to do so</li>
           <li>
             <ul>
               <li>This is called a capture</li>
             </ul>
             </li>
-          <li>The game ends when one of the player's have reached a win condition</li>
+          <li id="sub-li-chess">The game ends when one of the player's have reached a win condition</li>
         </ul>
       </li>
       <li id="main-li"><strong>Win Conditions</strong></li>
       <li>
         <ul>
-          <li>If a player checkmates their opponent, the player wins the game</li>
+          <li id="sub-li-chess">If a player checkmates their opponent, the player wins the game</li>
           <li>
             <ul>
               <li>A checkmate is accomplished by putting the opposing player's king in a position where not only is the king can be captured in one move but also where the player can't do anything to prevent the capture</li>
             </ul>
           </li>
-          <li>If a timer is being used a player runs out of time, they lose the game</li>
-          <li>If a player forfeits they lose the game</li>
-          <li>A draw can occur if both players agree to a draw</li>
-          <li>A draw can also occur if both players repeat the exact same set of moves three times in a row</li>
-         <li>A draw can also occur if a player is unable to make any move</li>
+          <li id="sub-li-chess">If a timer is being used a player runs out of time, they lose the game</li>
+          <li id="sub-li-chess">If a player forfeits they lose the game</li>
+          <li id="sub-li-chess">A draw can occur if both players agree to a draw</li>
+          <li id="sub-li-chess">A draw can also occur if both players repeat the exact same set of moves three times in a row</li>
+         <li id="sub-li-chess">A draw can also occur if a player is unable to make any move</li>
        </ul>
      </li>
       <li id="main-li"><strong>Chess Pieces</strong></li>
      <li>
        <ul>
-         <li>There are 6 different types of pieces in the game</li>
-         <li>Pawn</li>
+         <li id="sub-li-chess">There are 6 different types of pieces in the game</li>
+         <li id="sub-li-chess">Pawn</li>
          <li>
            <ul>
              <li>The pawn can move up to one space forward per turn</li>
@@ -68,21 +68,21 @@
              <li>A pawn can capture an opposing player's piece by moving one space diagonally if there is an opponent's piece there</li>
            </ul>
          </li>
-         <li>Rook</li>
+         <li id="sub-li-chess">Rook</li>
          <li>
            <ul>
              <li>A rook can move any number of spaces horizontally and vertically as long as the rook isn't being blocked by another piece</li>
              <li>A rook can capture any piece that is horizontal or vertical to it, as long as the rook isn't being blocked by another piece</li>
            </ul>
          </li>
-         <li>Bishop</li>
+         <li id="sub-li-chess">Bishop</li>
          <li>
            <ul>
              <li>A bishop can move any number of spaces diagonally</li>
              <li>It can can capture an opposing player's space similarly as the rook except in the diagonal direction</li>
            </ul>
          </li>
-         <li>Knight</li>
+         <li>Knight id="sub-li-chess"</li>
          <li>
            <ul>
              <li>The knight can move 2 spaces horizontally or vertically but it also must move 1 space perpendicular to the direction that the knight moved 2 spaces towards</li>
@@ -90,14 +90,14 @@
              <li>The knight can capture a piece that is in a position where the knight can move</li>
            </ul>
          </li>
-         <li>Queen</li>
+         <li>Queen id="sub-li-chess"</li>
          <li>
            <ul>
              <li>The Queen is a combination of the bishop and rook as it can move in any direction that a rook and bishop could</li>
              <li>Likewise, the queen can capture pieces the same way a rook and bishop could</li>
            </ul>
          </li>		
-         <li>King</li>
+         <li id="sub-li-chess">King</li>
          <li>
            <ul>
              <li>The king can move one space in any direction and take a piece that is one space away from it</li>
@@ -108,8 +108,8 @@
       <li id="main-li"><strong>Board Structure</strong></li>
      <li>
        <ul>
-         <li>The board of the game consists of an 8x8 board with square tiles that alternate between 2 different colors</li>
-         <li>The following image displays how the board should look like before a game of chess begins</li>
+         <li id="sub-li-chess">The board of the game consists of an 8x8 board with square tiles that alternate between 2 different colors</li>
+         <li id="sub-li-chess">The following image displays how the board should look like before a game of chess begins</li>
          <li><img src="media/chess_labels.JPG" alt="Symbols of chess pieces labeled"></li>
          <li><img src="media/board.JPG" alt="Chess board layout"></li>
        </ul>
