Adding sub-li-chess ids to some of the li's
Forgot to note this in the previous commit

--- a/chess.html
+++ b/chess.html
@@ -93,7 +93,7 @@
          <li>Queen id="sub-li-chess"</li>
          <li>
            <ul>
-             <li>The Queen is a combination of the bishop and rook as it can move in any direction that a rook and bishop could</li>
+             <li>The Queen is a combination of the bishop and rook as the queen can move in any direction that a rook and bishop could</li>
              <li>Likewise, the queen can capture pieces the same way a rook and bishop could</li>
            </ul>
          </li>		
