Fixing the some of the colors for the "section" lis

--- a/chess.html
+++ b/chess.html
@@ -82,7 +82,7 @@
              <li>It can can capture an opposing player's space similarly as the rook except in the diagonal direction</li>
            </ul>
          </li>
-         <li>Knight id="sub-li-chess"</li>
+         <li id="sub-li-chess">Knight</li>
          <li>
            <ul>
              <li>The knight can move 2 spaces horizontally or vertically but it also must move 1 space perpendicular to the direction that the knight moved 2 spaces towards</li>
@@ -90,7 +90,7 @@
              <li>The knight can capture a piece that is in a position where the knight can move</li>
            </ul>
          </li>
-         <li>Queen id="sub-li-chess"</li>
+         <li id="sub-li-chess">Queen</li>
          <li>
            <ul>
              <li>The Queen is a combination of the bishop and rook as the queen can move in any direction that a rook and bishop could</li>
