Adding the "secondary-sub-li-chess" ids to some of the lis

--- a/chess.html
+++ b/chess.html
@@ -34,7 +34,7 @@
           <li id="sub-li-chess">A player may remove one of their opponent's pieces if one of their pieces are able to do so</li>
           <li>
             <ul>
-              <li>This is called a capture</li>
+              <li id="secondary-sub-li-chess">This is called a capture</li>
             </ul>
             </li>
           <li id="sub-li-chess">The game ends when one of the player's have reached a win condition</li>
@@ -46,7 +46,7 @@
           <li id="sub-li-chess">If a player checkmates their opponent, the player wins the game</li>
           <li>
             <ul>
-              <li>A checkmate is accomplished by putting the opposing player's king in a position where not only is the king can be captured in one move but also where the player can't do anything to prevent the capture</li>
+              <li id="secondary-sub-li-chess">A checkmate is accomplished by putting the opposing player's king in a position where not only is the king can be captured in one move but also where the player can't do anything to prevent the capture</li>
             </ul>
           </li>
           <li id="sub-li-chess">If a timer is being used a player runs out of time, they lose the game</li>
@@ -63,44 +63,44 @@
          <li id="sub-li-chess">Pawn</li>
          <li>
            <ul>
-             <li>The pawn can move up to one space forward per turn</li>
-             <li>If it is the first time the pawn is moving, the pawn may move 2 spaces forward</li>
-             <li>A pawn can capture an opposing player's piece by moving one space diagonally if there is an opponent's piece there</li>
+             <li id="secondary-sub-li-chess">The pawn can move up to one space forward per turn</li>
+             <li id="secondary-sub-li-chess">If it is the first time the pawn is moving, the pawn may move 2 spaces forward</li>
+             <li id="secondary-sub-li-chess">A pawn can capture an opposing player's piece by moving one space diagonally if there is an opponent's piece there</li>
            </ul>
          </li>
          <li id="sub-li-chess">Rook</li>
          <li>
            <ul>
-             <li>A rook can move any number of spaces horizontally and vertically as long as the rook isn't being blocked by another piece</li>
-             <li>A rook can capture any piece that is horizontal or vertical to it, as long as the rook isn't being blocked by another piece</li>
+             <li id="secondary-sub-li-chess">A rook can move any number of spaces horizontally and vertically as long as the rook isn't being blocked by another piece</li>
+             <li id="secondary-sub-li-chess">A rook can capture any piece that is horizontal or vertical to it, as long as the rook isn't being blocked by another piece</li>
            </ul>
          </li>
          <li id="sub-li-chess">Bishop</li>
          <li>
            <ul>
-             <li>A bishop can move any number of spaces diagonally</li>
-             <li>It can can capture an opposing player's space similarly as the rook except in the diagonal direction</li>
+             <li id="secondary-sub-li-chess">A bishop can move any number of spaces diagonally</li>
+             <li id="secondary-sub-li-chess">It can can capture an opposing player's space similarly as the rook except in the diagonal direction</li>
            </ul>
          </li>
          <li id="sub-li-chess">Knight</li>
          <li>
            <ul>
-             <li>The knight can move 2 spaces horizontally or vertically but it also must move 1 space perpendicular to the direction that the knight moved 2 spaces towards</li>
-             <li>The knight can't be blocked by other pieces as the knight can, in a way, jump over pieces</li>
-             <li>The knight can capture a piece that is in a position where the knight can move</li>
+             <li id="secondary-sub-li-chess">The knight can move 2 spaces horizontally or vertically but it also must move 1 space perpendicular to the direction that the knight moved 2 spaces towards</li>
+             <li id="secondary-sub-li-chess">The knight can't be blocked by other pieces as the knight can, in a way, jump over pieces</li>
+             <li id="secondary-sub-li-chess">The knight can capture a piece that is in a position where the knight can move</li>
            </ul>
          </li>
          <li id="sub-li-chess">Queen</li>
          <li>
            <ul>
-             <li>The Queen is a combination of the bishop and rook as the queen can move in any direction that a rook and bishop could</li>
-             <li>Likewise, the queen can capture pieces the same way a rook and bishop could</li>
+             <li id="secondary-sub-li-chess">The Queen is a combination of the bishop and rook as the queen can move in any direction that a rook and bishop could</li>
+             <li id="secondary-sub-li-chess">Likewise, the queen can capture pieces the same way a rook and bishop could</li>
            </ul>
          </li>		
          <li id="sub-li-chess">King</li>
          <li>
            <ul>
-             <li>The king can move one space in any direction and take a piece that is one space away from it</li>
+             <li id="secondary-sub-li-chess">The king can move one space in any direction and take a piece that is one space away from it</li>
            </ul>
          </li>
        </ul>
