--- a/pokemon.html
+++ b/pokemon.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Pokemon</title>
   <link href="style/style.css" rel="stylesheet">
+  <link href="style/normalize.css" rel="stylesheet" type="text/css">
 </head>
 <body class="pokemon">
   <section>
