--- a/pokemon.html
+++ b/pokemon.html
@@ -97,7 +97,7 @@
           <li>Remixed by Dr.Pez</li>
           <li>
             <audio controls>
-              <source src="media/Elite_Four_Battle_(Pokemon_RSE).mp3" type="audio/mpeg">
+              <source src="media/elite_four_battle_(pokemon_rse).mp3" type="audio/mpeg">
             </audio>
           </li>
         </ul>
