--- a/chess.html
+++ b/chess.html
@@ -107,8 +107,10 @@
       <li><strong>Board Structure</strong></li>
      <li>
        <ul>
-         <li>The board of the game consists of an 8x8 board with square tiles that alternate between 2 different colors<img src="media/chess_labels.JPG" alt="Symbols of chess pieces labeled"></li><br>
-         <li>The following image displays how the board should look like before a game of chess begins<img src="media/board.JPG" alt="Chess board layout"></li>
+         <li>The board of the game consists of an 8x8 board with square tiles that alternate between 2 different colors</li>
+         <li>The following image displays how the board should look like before a game of chess begins</li>
+	 <li><img src="media/chess_labels.JPG" alt="Symbols of chess pieces labeled"></li>
+	 <li><img src="media/board.JPG" alt="Chess board layout"></li>
        </ul>
      </li>
    </ul>
