--- a/chess.html
+++ b/chess.html
@@ -109,8 +109,8 @@
           <ul>
             <li>The board of the game consists of an 8x8 board with square tiles that alternate between 2 different colors</li>
             <li>The following image displays how the board should look like before a game of chess begins</li>
-            <li><img src="media/chess_labels.JPG" alt="Symbols of chess pieces labeled"></li>
-            <li><img src="media/board.JPG" alt="Chess board layout"></li>
+            <li><img src="media/chess_labels.png" alt="Symbols of chess pieces labeled"></li>
+            <li><img src="media/board.png" alt="Chess board layout"></li>
           </ul>
         </li>
       </ul>
