--- a/pokemon.html
+++ b/pokemon.html
@@ -88,7 +88,7 @@
           </ul>
         </li>
         <li><strong>Favorite Pokemon</strong></li>
-        <li><img src="media/favorite_pokemon.JPG" alt="Favorite Pokemon"></li>
+        <li><img src="media/favorite_pokemon.png" alt="Favorite Pokemon"></li>
         <li><strong>Personal favorite remixed music from the pokemon series</strong></li>
         <li>
           <ul>
